[metadata]
name = poqaio
version = attr: poqaio.__version__
url = https://github.com/blenq/poqaio
project_urls =
    Documentation = https://poqaio.readthedocs.io/
    Code = https://github.com/blenq/poqaio
    Issue Tracker = https://github.com/blenq/poqaio/issues
author = Bart Lengkeek
author_email = github@lengkeek.com
description = Asyncio postgresql client
long_description = file: README.md
long_description_content_type = text/markdown
keywords = asyncio, postgresql
license = MIT License
platform = any
classifiers =
    Framework :: AsyncIO
    Development Status :: 3 - Alpha    
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Database
    Topic :: Database :: Front-Ends
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.6
zip_safe = True
packages = find:
include_package_data = true

[options.packages.find]
exclude = test

[coverage:run]
source=poqaio
branch=true